--- a/index.html
+++ b/index.html
@@ -151,7 +151,23 @@
                     <div class="garis d-block mx-auto mb-4"></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-12">
+                    <div class="col-lg-4 col-12 p-3">
+                        <img
+                            src="./assets/img/asdasd.png"
+                            class="img-fluid w-100"
+                            alt=""
+                            srcset=""
+                        />
+                    </div>
+                    <div class="col-lg-4 col-12 p-3">
+                        <img
+                            src="./assets/img/asdasd.png"
+                            class="img-fluid w-100"
+                            alt=""
+                            srcset=""
+                        />
+                    </div>
+                    <div class="col-lg-4 col-12 p-3">
                         <img
                             src="./assets/img/asdasd.png"
                             class="img-fluid w-100"
