--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </p>
                         </div>
                         <div class="action mt-4">
-                            <a href="#" class="btn btn-primary-kkn">
+                            <a href="#" class="btn btn-primary-kkn shadow-none">
                                 Pengajuan</a
                             >
                         </div>
@@ -194,7 +194,13 @@
                                     quia eos, fugiat corrupti neque consectetur
                                     tenetur repellat? Accusamus!
                                 </p>
-                                <a href="#" class="btn btn-secondary-kkn mt-4"
+                                <a
+                                    href="#"
+                                    class="
+                                        btn btn-secondary-kkn
+                                        mt-4
+                                        shadow-none
+                                    "
                                     >Kritik & Saran</a
                                 >
                             </div>
