--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
             crossorigin="anonymous"
         />
 
-        <link rel="stylesheet" href="./assets/style.css" />
+        <!-- Owl CSS -->
+        <link rel="stylesheet" href="./assets/css/owl.carousel.min.css" />
+        <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css" />
+
+        <link rel="stylesheet" href="./assets/css/style.css" />
+
+        <!-- Owl JS -->
+
+        <script src="./assets/js/owl/jquery.min.js"></script>
+        <script src="./assets/js/owl/owl.carousel.min.js"></script>
 
         <title>Project KKN</title>
     </head>
@@ -151,23 +160,13 @@
                     <div class="garis d-block mx-auto mb-4"></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-12 p-3">
+                    <div class="loop owl-carousel owl-theme">
                         <img
                             src="./assets/img/asdasd.png"
                             class="img-fluid w-100"
                             alt=""
                             srcset=""
                         />
-                    </div>
-                    <div class="col-lg-4 col-12 p-3">
-                        <img
-                            src="./assets/img/asdasd.png"
-                            class="img-fluid w-100"
-                            alt=""
-                            srcset=""
-                        />
-                    </div>
-                    <div class="col-lg-4 col-12 p-3">
                         <img
                             src="./assets/img/asdasd.png"
                             class="img-fluid w-100"
@@ -221,18 +220,25 @@
             </div>
         </section>
 
-        <!-- Optional JavaScript; choose one of the two! -->
+        <!-- Owl JS-->
+        <script>
+            $('.loop').owlCarousel({
+                center: true,
+                items: 2,
+                loop: true,
+                margin: 10,
+                responsive: {
+                    600: {
+                        items: 4,
+                    },
+                },
+            });
+        </script>
 
-        <!-- Option 1: Bootstrap Bundle with Popper -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"
         ></script>
-
-        <!-- Option 2: Separate Popper and Bootstrap JS -->
-        <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    --></body>
+    </body>
 </html>
