styling header desa

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 >
                     <div class="col-lg-8">
                         <div class="sub-title mb-4">
-                            <div class="alert alert-success mx-5" role="alert">
+                            <div class="alert alert-warning mx-5" role="alert">
                                 RT06.RW.04 kec simokerto kel. tembokrejo kota
                                 surabaya
                             </div>
                             <p></p>
                         </div>
-                        <div class="title my-4">
+                        <div class="title my-5">
                             <h1>Kampung Temobk Arum 2</h1>
                         </div>
                         <div class="desc px-5">
