--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <p></p>
                         </div>
                         <div class="title my-5">
-                            <h1>Kampung Temobk Arum 2</h1>
+                            <h1>Kampung Temobk Arum</h1>
                         </div>
                         <div class="desc px-5">
                             <p>
