--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 >
                     <div class="col-lg-10">
                         <div class="title mb-4">
-                            <h3>Peraturan Kepada warga tembok arum 2</h3>
+                            <h3>Peraturan Kepada warga tambak arum 2</h3>
                         </div>
                         <div class="garis d-block mx-auto mb-4"></div>
                         <div class="list">
