--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                     <div class="col-lg-8">
                         <div class="sub-title mb-4">
                             <div class="alert alert-warning mx-5" role="alert">
-                                RT06.RW.04 kec simokerto kel. tembokrejo kota
+                                RT06.RW.04 kec simokerto kel. tambakrejo kota
                                 surabaya
                             </div>
                             <p></p>
                         </div>
                         <div class="title my-5">
-                            <h1>Kampung Temobk Arum</h1>
+                            <h1>Kampung Tambak Arum</h1>
                         </div>
                         <div class="desc px-5">
                             <p>
@@ -139,7 +139,7 @@
                                     class="img-fluid"
                                     alt="..."
                                 />
-                                <h5 class="card-title">Search doctor</h5>
+                                <h5 class="card-title">KTP</h5>
                                 <p class="card-text">
                                     Choose your doctor from thousands of
                                     specialist, general, and trusted hospitals
